# Nexa-Browser

./: CMakeLists.txt  README.md  TODO.md  blueprint_extracted.txt  launch_log.txt  main.js  main.js.backup  package-lock.json  package.json  start_nexa.bat
backend/: auth.js  db.js  nexabrain.js  package-lock.json  package.json  permission.js  server.js
backend/core/: permission-manager.js  workflow-orchestrator.js
backend/storage/: database.js
docs/: ACTION_EXECUTOR_ARCHITECTURE.md  AI_SERVICE_CONTRACT.md  API_QUICK_REFERENCE.md  ARCHITECTURE.md  EXECUTIVE_SUMMARY.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  IPC_CONTRACT_SPECIFICATION.md  NEXA_MVP_ARCHITECTURE.md  NEXA_POSITIONING.md  PHASE_2_3_4_IMPLEMENTATION_GUIDE.md  PLANNING_ENGINE_LOGIC.md  ROADMAP.md  TESTING_PROCEDURES.md
migration/cef/: README.md
migration/cef/browser-services/: BOUNDARIES.md
migration/cef/contracts/: ipc-contracts.md
migration/cef/internal-pages/: README.md
migration/cef/native-shell/: BOUNDARIES.md
scripts/: download_cef.ps1  package.ps1  start.js
src/: main.js  preload.js
src/core/: action-executor.js  nexa-brain.js  performance-optimizer.js
src/renderer/: about.html  ai-popup.html  ai-popup.js  chrome.html  index.html  login.html  nexa-home.html  nexabridge.js  preload.js  renderer.js  settings.html  styles.css
src/renderer/components/: clarification-dialog.js  permission-dialog.js  workflow-sidebar.js  workflow-ui-manager.js  workflow-ui.css
src/storage/: profiles.js
tests/: integration.test.js
